--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dynamic Target Swagger UI</title>
+  <title>API Documentation</title>
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist/swagger-ui.css" />
   <style>
     html {
       box-sizing: border-box;
+      overflow: -moz-scrollbars-vertical;
       overflow-y: scroll;
     }
     *, *:before, *:after {
@@ -19,10 +20,17 @@
     #target-form {
       padding: 10px;
       background: #eee;
-      border-bottom: 1px solid #ccc;
+      display: flex;
+      gap: 10px;
+      align-items: center;
     }
     #target-form input {
-      margin-right: 10px;
+      padding: 5px;
+      font-size: 1em;
+    }
+    #target-form button {
+      padding: 5px 10px;
+      font-size: 1em;
     }
   </style>
 </head>
@@ -57,8 +65,10 @@
         ],
         layout: "StandaloneLayout",
         requestInterceptor: (req) => {
-          const url = new URL(req.url, window.location.origin);
-          req.url = targetHost + url.pathname;
+          if (!req.url.endsWith("swagger.yaml")) {
+            const url = new URL(req.url, window.location.origin);
+            req.url = `${targetHost}${url.pathname}`;
+          }
           return req;
         }
       });
