--- a/index.html
+++ b/index.html
@@ -17,27 +17,17 @@
       margin: 0;
       background: #fafafa;
     }
-    #target-form {
-      padding: 10px;
-      background: #eee;
-      display: flex;
-      gap: 10px;
-      align-items: center;
-    }
-    #target-form input {
-      padding: 5px;
-      font-size: 1em;
-    }
-    #target-form button {
-      padding: 5px 10px;
-      font-size: 1em;
+    .topbar .download-url-wrapper {
+      display: none !important;
     }
   </style>
 </head>
 <body>
-  <div id="target-form">
-    <label>Target IP: <input type="text" id="ip" placeholder="127.0.0.1"></label>
-    <label>Port: <input type="text" id="port" placeholder="8080"></label>
+  <div style="padding: 10px;">
+    <label for="ip">Target IP:</label>
+    <input type="text" id="ip" placeholder="127.0.0.1">
+    <label for="port">Port:</label>
+    <input type="text" id="port" placeholder="8080">
     <button onclick="updateTarget()">Set Target</button>
   </div>
   <div id="swagger-ui"></div>
